Add features section
Basic features section has been added (HTML + desktop CSS + JS).
Images in "tab" div needs some polish (there is a problem with pseudoelement's
size);

--- a/styles/handy.css
+++ b/styles/handy.css
@@ -19,7 +19,7 @@ html {
 }
 
 /*set fonts, basic color and delete underlines*/
-p, a, h1, h2, h3, h4, h5, h6 {
+p, a, h1, h2, h3, h4, h5, h6, button {
     font-family: 'Rubik', sans-serif;
     color: black;
 }
@@ -28,6 +28,6 @@ a {
     text-decoration: none;
 }
 
-a, p {
+a, p, button {
     font-size: 1rem;
 }
