--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
 @import "/styles/handy.css";
 @import "/styles/upper-nav.css";
 @import "/styles/introduction.css";
+@import "/styles/features.css";
