Add download section
Download section has been added (HTML + desktop CSS)

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,4 @@
 @import "/styles/upper-nav.css";
 @import "/styles/introduction.css";
 @import "/styles/features.css";
+@import "/styles/download.css";
