--- a/styles/style.css
+++ b/styles/style.css
@@ -5,4 +5,5 @@
 @import "/styles/download.css";
 @import "/styles/faq.css";
 @import "/styles/footer.css";
-@import "/styles/bottom-nav.css"
+@import "/styles/bottom-nav.css";
+@import "/styles/modal.css";
