--- a/styles/download.css
+++ b/styles/download.css
@@ -5,6 +5,7 @@
 
 .download h2 {
     text-align: center;
+    font-size: 1.5rem;
 }
 
 .download>.description>p {
@@ -42,6 +43,10 @@
 .browser>.logo {
     width: 40%;
     margin: 30px 0;
+}
+
+.browser>h3 {
+    font-size: 1.2rem;
 }
 
 .browser>p {
