--- a/styles/features.css
+++ b/styles/features.css
@@ -5,6 +5,11 @@
 
 .features h2 {
     text-align: center;
+    font-size: 1.5rem;
+}
+
+.features h3 {
+    font-size: 1.5rem;
 }
 
 .features>.description>p {
@@ -77,12 +82,16 @@
     position: absolute;
     z-index: -2;
     bottom: 0;
-    left: -15%;
-    width: 100%;
+    right: 30%;
+    width: 90%;
     height: 100%;
     border-bottom-right-radius: 15%;
     background-color: var(--bright-blue);
-    transform: translateY(15%);
+    transform: translateY(12%);
+}
+
+.features>.tab>.image-wrapper.resize::before {
+    transform: translateY(10%);
 }
 
 .tab>.image-wrapper>img {
