--- a/styles/introduction.css
+++ b/styles/introduction.css
@@ -11,6 +11,10 @@
     padding-right: 5%;
 }
 
+.introduction h1 {
+    font-size: 2rem;
+}
+
 .introduction p {
     margin: 30px 0;
     color: var(--grey);
@@ -60,12 +64,12 @@
     position: absolute;
     z-index: -2;
     bottom: 0;
-    right: 0;
-    width: 70%;
+    right: -5%;
+    width: 80%;
     height: 80%;
     border-bottom-left-radius: 20%;
     background-color: var(--bright-blue);
-    transform: translateY(-5%);
+    transform: translateY(-0%);
 }
 
 .introduction>.image-wrapper>img {
