--- a/styles/handy.css
+++ b/styles/handy.css
@@ -32,3 +32,9 @@ a {
 a, p, button {
     font-size: 1rem;
 }
+
+/*background images in sections will not overflow*/
+main {
+    max-width: 100vw;
+    overflow: hidden;
+}
