--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,5 @@
 @import "/styles/footer.css";
 @import "/styles/bottom-nav.css";
 @import "/styles/modal.css";
+@import "/styles/rwd-desktop.css";
+@import "/styles/rwd-mobile-vertical.css";
