--- a/styles/upper-nav.css
+++ b/styles/upper-nav.css
@@ -2,6 +2,9 @@
     width: 60%;
     padding-right: 5%;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .upper-nav>ul {
@@ -10,10 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.upper-nav li:nth-child(1) {
-    margin-right: 40%;
+    width: 50%;
 }
 
 .upper-nav a {
@@ -25,7 +25,7 @@
     color: var(--bright-red);
 }
 
-.upper-nav img {
+.upper-nav svg {
     display: block;
 }
 
@@ -42,4 +42,13 @@
     background-color: white;
     color: var(--bright-red);
     border: 2px solid var(--bright-red);
+}
+
+.upper-nav>.second-line, .upper-nav>.first-line button {
+    display: none;
+}
+
+.upper-nav>.first-line {
+    display: flex;
+    align-items: center;
 }
