GH Pages Fix 2.0

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
-@import "/styles/handy.css";
-@import "/styles/upper-nav.css";
-@import "/styles/introduction.css";
-@import "/styles/features.css";
-@import "/styles/download.css";
-@import "/styles/faq.css";
-@import "/styles/footer.css";
-@import "/styles/bottom-nav.css";
-@import "/styles/modal.css";
-@import "/styles/rwd-desktop.css";
-@import "/styles/rwd-mobile-vertical.css";
+@import "handy.css";
+@import "upper-nav.css";
+@import "introduction.css";
+@import "features.css";
+@import "download.css";
+@import "faq.css";
+@import "footer.css";
+@import "bottom-nav.css";
+@import "modal.css";
+@import "rwd-desktop.css";
+@import "rwd-mobile-vertical.css";
